# test-issue-auto-update

./: README.md  flake.nix  package-lock.json  package.json  pyproject.toml
.github/ISSUE_TEMPLATE/: event.yaml
.github/actions/nix-setup/: action.yml
.github/actions/update-upcoming-events/: script.js
.github/workflows/: update-upcoming-events.yml
content/events/: 2023-07-09--Fire Wings Hangout--1.md  2023-07-09--[Event]: Fire Wings - July 9, 2023--1.md  2023-08-08--El Dorado Park Hangout--2.md  2023-08-08--[Event]: El Dorado Park - August 8, 2023--2.md  2023-10-13--23b Hangout--3.md  2023-10-13--[Event]: 23b - October 13, 2023--3.md  2023-11-04--Alamitos Library Hangout--15.md
